# rust-api-server

./: .env  Cargo.toml  Dockerfile
.sqlx/: query-2329b8adab2e1b6cb488253be14e074838ca89960f9c80a2fc432570f31643d2.json  query-6db5f2ce58ab015e856ce33ef1153ff38154e4c5fa66f7b62a995add1100a337.json  query-70e2bafa8d6f18432cd3f273bfc610ef6f7d793364a4a0076836111a4843cc13.json  query-b171b0b84c9603068240a3a8a43a76454f19ce70084d1047616eee8031d1e9bf.json  query-d1cc52ab2aaf41b187231081cdb9453dd84b4418a28f13e0ecba9569d009e729.json
migrations/: 20241207_create_items_table.sql
src/: error.rs  main.rs
src/handlers/: health.rs  items.rs
src/models/: mod.rs
